bug fix: pdf merge

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,7 @@ dependencies = [
     "pandas",
     "matplotlib",
     "reportlab",
-    "pypdf2",
-    "pymupdf"
+    "pypdf2"
 ]
 
 [project.scripts]
